--- a/adventure-time-clicky-game/src/components/Header/Header.css
+++ b/adventure-time-clicky-game/src/components/Header/Header.css
@@ -2,8 +2,8 @@
     background-color: #2C323C;
     background-image: url("/assets/images/background.jpg");
     background-repeat: repeat;
-    color: white;
-    min-height: 100px;
+    color: black;
+    min-height: 400px;
     padding: 180px 20px; 
     padding-bottom: 140px;
     text-align: center;
